--- a/src/main/resources/web/inc.html
+++ b/src/main/resources/web/inc.html
@@ -63,6 +63,7 @@
                 <li class="layui-nav-item"><a th:title="用户管理" th:href="@{/user/query}">用户管理</a></li>
                 <li class="layui-nav-item"><a th:title="车辆管理" th:href="@{/vehicle/query}">车辆管理</a></li>
                 <li class="layui-nav-item"><a th:title="门店管理" th:href="@{/shop/query}">门店管理</a></li>
+                <li class="layui-nav-item"><a th:title="订单管理" th:href="@{/order/query}">订单管理</a></li>
             </ul>
         </div>
     </div>
