--- a/src/main/resources/web/ylt/lease.html
+++ b/src/main/resources/web/ylt/lease.html
@@ -410,6 +410,9 @@
             <h2>取车</h2>
             <div class="book-agileinfo-form">
                 <form id="orderForm" action="#" method="post">
+                    <input type="hidden" id="vehicleId" name="vehicleId">
+                    <input type="hidden" id="rent" name="rent">
+                    <input type="hidden" id="userId" name="userId">
                     <div class="row main-agile-sectns">
                         <div class="col-md-12 agileits-btm-spc form-text1">
                             <input type="text" value="2012-05-15 21:05" id="obtainTime" name="obtainTime" data-date-format="yyyy-mm-dd hh:ii">
@@ -418,19 +421,19 @@
                     <div class="row ">
                         <div class="col-md-4 agileits-btm-spc form-text1">
                             <!--<input id="obtainCity" name="obtainCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="obtainProv" class="form-control" onchange="changeProv('obtain')">
+                            <select id="obtainProv" name="obtainProv" class="form-control" onchange="changeProv('obtain')">
                                 <option value="">请选择</option>
                             </select>
                         </div>
                         <div class="col-md-4 agileits-btm-spc form-text1">
                             <!--<input id="obtainCity" name="obtainCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="obtainCity" class="form-control" onchange="changeCity('obtain')">
+                            <select id="obtainCity" name="obtainCity" class="form-control" onchange="changeCity('obtain')">
                                 <option value="">请选择</option>
                             </select>
                         </div>
                         <div class="col-md-4 agileits-btm-spc form-text1">
                             <!--<input id="obtainCity" name="obtainCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="obtainArea" class="form-control" onchange="changeArea('obtain')">
+                            <select id="obtainArea" name="obtainArea" class="form-control" onchange="changeArea('obtain')">
                                 <option value="">请选择</option>
                             </select>
                         </div>
@@ -438,7 +441,7 @@
                     <div class="row ">
                         <div class="col-md-12 agileits-btm-spc form-text1">
                             <!--<input id="obtainCity" name="obtainCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="obtainShop" class="form-control">
+                            <select id="obtainShop" name="obtainShop" class="form-control">
                                 <option value="">请选择</option>
                             </select>
                         </div>
@@ -452,19 +455,19 @@
                     <div class="row ">
                         <div class="col-md-4 agileits-btm-spc form-text1">
                             <!--<input id="returnCity" name="returnCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="returnProv" class="form-control" onchange="changeProv('return')">
+                            <select id="returnProv" name="returnProv" class="form-control" onchange="changeProv('return')">
                                 <option value="">请选择</option>
                             </select>
                         </div>
                         <div class="col-md-4 agileits-btm-spc form-text1">
                             <!--<input id="returnCity" name="returnCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="returnCity" class="form-control" onchange="changeCity('return')">
+                            <select id="returnCity" name="returnCity" class="form-control" onchange="changeCity('return')">
                                 <option value="">请选择</option>
                             </select>
                         </div>
                         <div class="col-md-4 agileits-btm-spc form-text1">
                             <!--<input id="returnCity" name="returnCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="returnArea" class="form-control" onchange="changeArea('return')">
+                            <select id="returnArea" name="returnArea" class="form-control" onchange="changeArea('return')">
                                 <option value="">请选择</option>
                             </select>
                         </div>
@@ -472,7 +475,7 @@
                     <div class="row ">
                         <div class="col-md-12 agileits-btm-spc form-text1">
                             <!--<input id="returnCity" name="returnCity" class="form-control" readonly type="text" data-toggle="city-picker">-->
-                            <select id="returnShop" class="form-control">
+                            <select id="returnShop" name="returnShop" class="form-control">
                                 <option value="">请选择</option>
                             </select>
                         </div>
@@ -676,9 +679,31 @@
     });
 
     $("#leaseSubmit").on("click",function(){
-        console.log($("#orderForm").serializeObject());
-        console.log($(".title").find('span[data-count="district"]').eq(0).data("code"));
-        console.log($(".title").find('span[data-count="district"]').eq(1).data("code"));
+        console.log();
+        var data = $("#orderForm").serializeObject();
+        if(data.userId){
+            $.ajax({
+                url:[[@{/order/save}]],
+                data:data,
+                type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    toastr.success("订单提交成功，请支付");
+                    $("#leasePanel").modal("hide");
+                }else{
+                    toastr.error(result.msg);
+                }
+            }
+        });
+        }else{
+            toastr.warning("请先登录");
+            return;
+        }
+
+
+        /*console.log($(".title").find('span[data-count="district"]').eq(0).data("code"));
+        console.log($(".title").find('span[data-count="district"]').eq(1).data("code"));*/
     });
 
     function registered(){
@@ -724,17 +749,21 @@
                         var carModelItem = '<div class="blog-grids row mb-3 carItem"><div class="col-1"></div><div class="col-3 pr-0 blog-grid-left"><img src="'+imgSrc+'" alt="" class="img-fluid"></div><div class="col-3 blog-grid-right" style="margin-top:3%"><h2><span>'+
                             item.brand+item.model+'</span></h2><div class="sub-meta"><h3><span><i class="far fa-id-card"></i>'+
                             item.exhaust+'厢|'+item.type+'|'+item.cubicles+'|乘坐'+item.seatNum+'人</span></h3></div></div><div class="col-1 blog-grid-right" style="margin-top:3%"><h2><span style="color:#fabe00">￥'+
-                            item.rent+'</span></h2><h4><span>/日均</span></h4></div><div class="col-4" style="margin-top:4%"><button onclick="lease(\''+item.id+'\',\''+imgSrc+'\')" type="button" class="btn btn-warning" style="width:20%;height:50px"><span style="color:#fff;font-weight:700">租车</span></button></div></div>';
+                            item.rent+'</span></h2><h4><span>/日均</span></h4></div><div class="col-4" style="margin-top:4%"><button onclick="lease(\''+item.id+'\',\''+imgSrc+'\',\''+item.rent+'\')" type="button" class="btn btn-warning" style="width:20%;height:50px"><span style="color:#fff;font-weight:700">租车</span></button></div></div>';
                         $("#carModelItem").append(carModelItem);
+
                     }
                 }
             }
         });
     }
-    function lease(id,imgSrc){
+    function lease(id,imgSrc,rent){
         var account = [[${account}]];
         $("#imgDesc").empty();
         $("#imgDesc").append('<img src="'+imgSrc+'" alt="" class="img-fluid">');
+        $("#vehicleId").val(id);
+        $("#rent").val(rent);
+        $("#userId").val(account.id);
         $("#leasePanel").modal('show');
         if(!account){
             toastr.warning("请先登录");
@@ -844,9 +873,9 @@
         if(area){
             $.ajax({
                 url:[[@{/unverify/getAddress}]],
-            type:"post",
+                type:"post",
                 data:{"prov":prov, "city":city, "area": area},
-            dataType:"json",
+                dataType:"json",
                 success:function(result){
                 if(result.success){
                     resetObShop(id);
