--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -74,7 +74,7 @@
 			<a id="nameSpan" href="#"><i class="fas fa-user"></i> </a>
 			<a href="#" data-toggle="modal" aria-pressed="false" data-target="#changePass">
 				<i class="fas fa-lock"></i> 修改密码</a>
-			<a th:href="@{/logout}">
+			<a th:href="@{/route/logout}">
 				<i class="fas fa-outdent"></i> 退出</a>
 		</div>
 	</div>
