--- a/src/main/resources/web/order/query.html
+++ b/src/main/resources/web/order/query.html
@@ -39,10 +39,22 @@
                 ,cols: [
                     [
                     {field:'id', title:'id',width:50 }
-                    ,{field:'address', title:'门店地址', fixed: 'left', templet: function(res){
-                            return '<em>'+ res.prov+'/' +res.city+'/' + res.area +'</em>'
+                    ,{field:'orderNo', title:'订单号'}
+                    ,{field:'username', title:'用户', templet: '<div>{{d.user.username}}</div>'}
+                    ,{field:'vehicle', title:'车型', templet: '<div>{{d.vehicle.brand+d.vehicle.model}}</div>'}
+                    ,{field:'obtainProv', title:'取车地址', templet: function(res){
+                            return '<em>'+ res.obtainProv+'/' +res.obtainCity+'/' + res.obtainArea +'/'+res.obtainShop+'</em>'
                         }}
-                    ,{field:'orderName', title:'门店名称'}
+                    ,{field:'obtainTime', title:'取车时间', templet: function(res){
+                        return '<em>'+ formatDate("yyyy-MM-dd hh:mm",new Date(res.obtainTime)) +'</em>'
+                    }}
+                    ,{field:'returnProv', title:'还车地址', templet: function(res){
+                        return '<em>'+ res.returnProv+'/' +res.returnCity+'/' + res.returnArea +'/'+res.returnShop+'</em>'
+                    }}
+                    ,{field:'returnTime', title:'还车时间', templet: function(res){
+                        return '<em>'+ formatDate("yyyy-MM-dd hh:mm",new Date(res.returnTime)) +'</em>'
+                    }}
+                    ,{field:'orderStatus', title:'订单状态'}
                     ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:120}
                 ]
             ]
