--- a/src/main/resources/web/ylt/index.html
+++ b/src/main/resources/web/ylt/index.html
@@ -97,28 +97,16 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="services.html">Services</a>
-					</li>
-					<li class="nav-item">
 						<a class="nav-link" th:href="@{/route/browseVehicle}">立即选车</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-						   data-toggle="dropdown" aria-haspopup="true"
-						   aria-expanded="false">
-							Dropdown
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item text-center" href="about.html">About</a>
-							<a class="dropdown-item text-center" href="services.html">Services</a>
-
-						</div>
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/order/order}">我的订单</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">Contact</a>
+						<a class="nav-link" th:href="@{/order/order}">帮助信息</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/order/order}">关于我们</a>
 					</li>
 				</ul>
 
@@ -260,113 +248,37 @@
 		</div>
 	</div>
 </section>
-<section class="about py-5">
-	<div class="container py-lg-5 py-3">
-		<h3 class="heading text-capitalize text-center">Welcome</h3>
+<section class="services py-5">
+	<div class="container py-lg-5">
+		<h1 class="heading text-capitalize text-center">Our Services</h1>
 		<h5 class="heading mb-5 text-center">Taxi Cab</h5>
-		<div class="about-head text-center ">
-			<div class="row about-grids-top mb-5">
-				<div class="col-lg-2 col-sm-4 col-6 about-grid p-0">
-					<i class="fas fa-money-bill-alt" aria-hidden="true"></i>
-					<h4>Low Charges</h4>
-				</div>
-				<div class="col-lg-2 col-sm-4 col-6 about-grid p-0">
-					<i class="fa fa-users" aria-hidden="true"></i>
-					<h4>Safe & Secure</h4>
-				</div>
-				<div class="col-lg-2 col-sm-4 col-6 mt-sm-0 mt-5 about-grid p-0">
-					<i class="fa fa-road" aria-hidden="true"></i>
-					<h4>Traffic Roads</h4>
-				</div>
-				<div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
-					<i class="fa fa-car" aria-hidden="true"></i>
-					<h4>Taxi Cabs</h4>
-				</div>
-				<div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
-					<i class="fa fa-cogs" aria-hidden="true"></i>
-					<h4>24/7 Service</h4>
-				</div>
-				<div class="col-lg-2 col-sm-4 col-6 mt-lg-0 mt-5 about-grid p-0">
-					<i class="fa fa-smile" aria-hidden="true"></i>
-					<h4>Customers</h4>
-				</div>
+		<div class="row service-grids">
+			<div class="col-lg-4">
+				<h3 class="text-capitalize mb-3">We have a range of vehicles</h3>
+				<p class="mb-3">Vestibulum et augue eu nibh tincidunt pretium vitae eget purus. Pellentesque necist urna eleifend, semper eros sed, sollicitudin justo. Nam finibus sollicitudin enim, nec blan ditmi laoreet sed. Morbi auctor purus ac ligula aliquetis vestibulum. Quisque vitae sollicitu dinet augue eu pretium vitae.</p>
 			</div>
-			<div class="row about-grids-bottom text-left">
-				<div class="col-md-4 mb-md-0 mb-5 about-bottom-grid">
-					<h4 class="mb-4">Lorem ipsum dolor sit amet, In consectetur adipiscing elit. Etiam commodo urna dolor,</h4>
-					<a href="about.html"> More About Us</a>	
-				</div>
-				<div class="col-md-4 about-bottom-grid">
-					<p>Lorem ipsum dolor sit init amet, consectetur elit adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibul umac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
-				</div>
-				<div class="col-md-4 about-bottom-grid">
-					<p>Lorem ipsum dolor sit init amet, consectetur elit adipiscing elit. Etiam commodo urna dolor, eget lacinia est aliquam id. Proin velit libero, vestibul umac orci eu, faucibus consectetur dolor. Cras ullamcorper elit eros, nec bibendum lacus accumsan eu. Donec non </p>
-				</div>
+			<div class="col-lg-2 col-6">
+				<img src="images/1.png" alt="" class="img-fluid" />
+				<img src="images/2.png" alt="" class="img-fluid" />
+				<img src="images/3.png" alt="" class="img-fluid" />
 			</div>
-		</div>
-				
-	</div>
-</section>
-<!-- //about -->
 
-<!-- Why taxi cab -->
-<section class="why">
-	<div class="container-fluid p-md-5 p-3">
-		<h3 class="heading text-capitalize text-center">Why taxi cab</h3>
-		<h5 class="heading mb-5 text-center">Taxi Cab</h5>
-		<div class="row why-grids">
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 mb-4 grid1 text-center">
-					<h4 class="mx-auto"><span>1</span></h4>
-					<p class="mt-5">Top Rated Drivers</p>
-				</div>
+			<div class="col-lg-4">
+				<h4 class="text-capitalize"><i class="fas fa-taxi clr1"></i>Luxury Cars</h4>
+				<p class="mb-4"> Vestibulum et augue eunibh metus diam.</p>
+				<h4 class="text-capitalize"><i class="fas fa-bus clr2"></i>Luxury Vans</h4>
+				<p class="mb-4"> Vestibulum et augue eunibh metus diam.</p>
+				<h4 class="text-capitalize"><i class="fas fa-car clr3"></i>Luxury Elite</h4>
+				<p class="mb-4"> Vestibulum et augue eunibh metus diam laoreet.</p>
 			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 mb-4 grid2 text-center">
-					<h4 class="mx-auto"><span>2</span></h4>
-					<p class="mt-5">Safety Journey</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 mb-4 grid3 text-center">
-					<h4 class="mx-auto"><span>3</span></h4>
-					<p class="mt-5">Without Peak Pricing</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 mb-4 grid4 text-center">
-					<h4 class="mx-auto"><span>4</span></h4>
-					<p class="mt-5">Fast And Secure</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 mb-md-0 mb-4 grid5 text-center">
-					<h4 class="mx-auto"><span>5</span></h4>
-					<p class="mt-5">Lowest Rates</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 mb-md-0 mb-4 grid6 text-center">
-					<h4 class="mx-auto"><span>6</span></h4>
-					<p class="mt-5">Best Quality Cabs</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 mb-sm-0 mb-4 grid7 text-center">
-					<h4 class="mx-auto"><span>7</span></h4>
-					<p class="mt-5">Online Booking</p>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<div class="py-5 px-2 grid8 text-center">
-					<h4 class="mx-auto"><span>8</span></h4>
-					<p class="mt-5">24/7 Cab Service</p>
-				</div>
+			<div class="col-lg-2 col-6">
+				<img src="images/3.png" alt="" class="img-fluid" />
+				<img src="images/1.png" alt="" class="img-fluid" />
+				<img src="images/2.png" alt="" class="img-fluid" />
 			</div>
 		</div>
 	</div>
 </section>
-
 <footer class="py-sm-5 py-4 px-md-5 px-3">
 	<div class="container-fluid pt-lg-5">
 		<div class="row">
